# comprehension-as-code

./: .gitignore  pyproject.toml
.planning/: ARCHITECTURE_SKETCH.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-comprehension-format/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md
.planning/phases/02-bayesian-update/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-belief-store/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-convergence-detection/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
spec/: COMPREHENSION_FORMAT.md  OBSERVATION_FORMAT.md
spec/examples/: sample_comprehension.md  sample_observation.md
src/comprehension/: __init__.py
src/comprehension/convergence/: __init__.py  accumulator.py  embedder.py  similarity.py  vector_store.py
src/comprehension/parser/: __init__.py  markdown_parser.py
src/comprehension/schema/: __init__.py  comprehension.py  confidence.py  observation.py
tests/: test_accumulator.py  test_bayesian_update.py  test_belief_store.py  test_confidence_rules.py  test_embedder.py  test_lifecycle.py  test_observation_index.py  test_repository.py  test_similarity.py  test_vector_store.py
tests/comprehension/: test_schema_validation.py
(+10 files in other folders)
