[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comprehension-as-code"
version = "0.1.0"
description = "A system where comprehension is the primary artifact, not code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/comprehension"]
